add updated the project with framer-motion functionality

--- a/src/index.css
+++ b/src/index.css
@@ -280,11 +280,9 @@ main {
   display: inline-block;
   font-size: 0.85rem;
   margin-left: 0.25rem;
+
 }
 
-.challenge-item-details.expanded .challenge-item-details-icon {
-  transform: rotate(180deg);
-}
 
 .challenge-item-description {
   margin: 0;
@@ -313,6 +311,20 @@ main {
   width: 30rem;
   max-width: 90%;
   z-index: 10;
+
+}
+
+@keyframes slide-up-fade-in {
+ 0% {
+   transform: translatey(30px);
+   opacity: 0;
+ }
+
+  100% {
+    transform: translatY(0px);
+    opacity: 1;
+  }
+
 }
 
 .modal h2 {
